[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dpulse"
version = "1.3.4"
description = "Cold Case Investigative Console (DPULSE + Profiler)"
authors = ["OSINT-TECHNOLOGIES <osint.technologies@gmail.com>", "StadiumPhenom <your_email@domain.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/stadiumphenom/dpulse"
repository = "https://github.com/stadiumphenom/dpulse"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

# --- Core DPULSE OSINT stack ---
requests = "2.32.4"
python-whois = "0.9.4"
colorama = "0.4.6"
pyfiglet = "1.0.2"
rich = "13.7.1"
builtwith = "1.3.4"
dnspython = "2.6.1"
openpyxl = "3.1.2"
PyMuPDF = "1.24.7"
selenium = "4.28.1"
webdriver-manager = "4.0.2"
undetected_chromedriver = "3.5.5"

# --- Streamlit Dashboard ---
streamlit = "^1.38.0"
pandas = "^2.2.0"
rapidfuzz = "^3.6.0"
Jinja2 = ">=3.1.2"

[tool.poetry.scripts]
dpulse = "dpulse.dpulse:run"
coldcase = "main:main"

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"
