[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "^1.39.0"
pandas = "^2.2.2"
rapidfuzz = "^3.6.1"
requests = "^2.32.4"
python-whois = "^0.9.4"
colorama = "^0.4.6"
pyfiglet = "^1.0.2"
rich = "^13.7.1"
builtwith = "^1.3.4"
dnspython = "^2.6.1"
openpyxl = "^3.1.2"
PyMuPDF = "^1.24.7"
selenium = "^4.28.1"
webdriver-manager = "^4.0.2"
undetected-chromedriver = "^3.5.5"
